[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "units_llnl"
version = "0.12.1"
description = "Python bindings for the LLNL units library"
readme = "python/README.md"
requires-python = ">=3.10"
license = {text="BSD-3-Clause"}
license-files = [
    "LICENSE",
    "NOTICE"
]
authors = [
    { name = "Philip Top", email = "top1@llnl.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
]
keywords = [
    "units",
    "measurement",
    "power systems",
    "co-simulation",
    "commodities",
    "science",
    "python",
]
[project.urls]
Homepage = "https://github.com/llnl/units"
Documentation = "https://units.readthedocs.io/en/latest/"
Repository = "https://github.com/llnl/units"
Issues = "https://github.com/LLNL/units/issues"
Changelog = "https://github.com/LLNL/units/blob/main/CHANGELOG.md"


[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# The build targets to use when building the project. Empty builds the default
# target.
build.targets = ["units_llnl_ext"]

# The components to install. If empty, all default components are installed.
install.components = []

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
# require a recent version of cmake
cmake.version = ">=3.26.1"

# ensure the python extension gets built
cmake.args = ["-DUNITS_BUILD_PYTHON_LIBRARY=ON", "-DUNITS_ENABLE_TESTS=OFF"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/test/python"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"
