[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "units-llnl"
version = "0.10.0"
description = "Python bindings for the llnl units library"
readme = "../README.md"
requires-python = ">=3.9"
authors = [
    { name = "Philip Top", email = "top1@llnl.gov" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/llnl/units"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.11 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"